# low-pass

./: .gitignore  .pre-commit-config.yaml  README.md
C3DExtract/: main.cpp
data/results/: matlab_results_12_hz.txt  matlab_results_20_hz.txt  matlab_results_3_hz.txt  matlab_results_6_hz.txt  opensim_results_12_hz.txt  opensim_results_20_hz.txt  opensim_results_3_hz.txt  opensim_results_6_hz.txt  python_results_12_hz.txt  python_results_20_hz.txt  python_results_3_hz.txt  python_results_6_hz.txt
data/source/: sine_wave_no_noise.txt  sine_wave_with_noise.txt
matlabGRF/: main.m
matlabLowPass/: main.m  multiple_frequencies.m  multiple_frequencies_from_file.m
opensimLowPass/: CMakeLists.txt  main.cpp
pythonGRF/: main.py  pyproject.toml
pythonLowPass/: generate-signals.py  main.py  plot.py  pyproject.toml
